cmake_minimum_required(VERSION 3.29)
project(LuaMod)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 23)

include_directories(src)

add_executable(LuaMod
        src/lapi.cpp
        src/lapi.hpp
        src/lauxlib.cpp
        src/lauxlib.hpp
        src/libs/lbaselib.cpp
        src/lcode.cpp
        src/lcode.hpp
        src/libs/lcorolib.cpp
        src/lctype.cpp
        src/lctype.hpp
        src/libs/ldblib.cpp
        src/ldebug.cpp
        src/ldebug.hpp
        src/ldo.cpp
        src/ldo.hpp
        src/ldump.cpp
        src/lfunc.cpp
        src/lfunc.hpp
        src/lgc.cpp
        src/lgc.hpp
        src/libs/linit.cpp
        src/ljumptab.hpp
        src/libs/liolib.cpp
        src/llex.cpp
        src/llex.hpp
        src/llimits.hpp
        src/libs/lmathlib.cpp
        src/lmem.cpp
        src/lmem.hpp
        src/libs/loadlib.cpp
        src/lobject.cpp
        src/lobject.hpp
        src/lopcodes.cpp
        src/lopcodes.hpp
        src/lopnames.hpp
        src/libs/loslib.cpp
        src/lparser.cpp
        src/lparser.hpp
        src/lprefix.hpp
        src/lstate.cpp
        src/lstate.hpp
        src/lstring.cpp
        src/lstring.hpp
        src/libs/lstrlib.cpp
        src/ltable.cpp
        src/ltable.hpp
        src/libs/ltablib.cpp
        src/ltm.cpp
        src/ltm.hpp
        src/lua.hpp
    src/lua.hpp
        src/luac.cpp
        src/luaconf.hpp
        src/luacoyote.cpp
        src/luacoyote.hpp
        src/libs/lualib.hpp
        src/lundump.cpp
        src/lundump.hpp
        src/libs/lutf8lib.cpp
        src/lvm.cpp
        src/lvm.hpp
        src/lzio.cpp
        src/lzio.hpp)
